Astro/astro-tests/testData/codeInsight/highlighting/charEntityResolution.astro
<div>
  &rarr;
  &nbsp;
  &<error descr="Unresolved entity reference fooBar">fooBar</error>;
</div>